# spotify-ml-project

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
spotify-ml-project/: __init__.py  dataset.py  features.py  plots.py
spotify-ml-project/modeling/: predict.py  train.py
spotify_ml_project/: __init__.py  dataset.py  features.py  plots.py
spotify_ml_project/modeling/: predict.py  train.py
