[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spotify-ml-project"
version = "0.0.1"
description = "End-to-end machine learning project using Spotify API for clustering and song recommendations."
authors = [
  { name = "Oscar Aillon" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["spotify-ml-project"]
include = ["pyproject.toml", "spotify-ml-project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["spotify-ml-project"]
force-sort-within-sections = true

